# SimpleMsg

./: CMakeLists.txt  Cln.cpp  LICENSE  README.md  SimpleMsg.cpp  SimpleMsg.h  Svr.cpp  shareMemCP.cpp  shareMemCP.h
SimpleMsg/: CMakeLists.txt  SimpleMsg.cpp  SimpleMsg.h  shareMemCP.cpp  shareMemCP.h
